--- a/src/styles/BlogSection.css
+++ b/src/styles/BlogSection.css
@@ -9,8 +9,21 @@
         0 0 75px #49ff18
 }
 
-.formButton {
+.spinStyle {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 9999; 
+}
 
+.formButtonContainer {
+    display: flex;
+    justify-content: center; /* Posiziona al centro orizzontale */
+    margin-top: 5vh; /* Posiziona a metà altezza dello schermo */
+    transform: translateY(-50%); /* Sposta su verso l'alto del 50% dell'altezza del pulsante */
+}
+
+.formButton {
     color: rgb(255, 255, 255);
     font-size: 24px;
     line-height: 24px;
