--- a/src/styles/MyNav.css
+++ b/src/styles/MyNav.css
@@ -1,9 +1,15 @@
 .logo-img {
-    width: 100px;
-    height: 25px;
-  }
+  width: 125px;
+  height: 35px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.logo-img:hover {
+  transform: translateX(1000%);
+  /* Logo automobile che scorre verso destra*/
+}
 
 .siteName {
   width: 200px;
-  height: 30px;
+  height: 40px;
 }
