--- a/src/styles/Singlecard.css
+++ b/src/styles/Singlecard.css
@@ -6,15 +6,44 @@
     text-shadow: 0px 3px 4px #1C6EA4;
 }
 
-.refText{
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+.cardWithShadow {
+    box-shadow: 6px 4px 15px rgba(4, 41, 10, 0.81);
+  }
+
+.refText {
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.1rem;
-    font-weight: 100;
+    font-weight: 600;
 }
 
-.detailText{
-    font-family:Arial, Helvetica, sans-serif;
+.detailText {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     font-size: 1rem;
     font-weight: 800;
-    color:rgb(4, 4, 148)
+    color: rgb(4, 4, 148)
 }
+
+.disappear {
+    animation: cardDisappear 1s forwards;
+}
+
+@keyframes cardDisappear {
+    0% {
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+    }
+
+    100% {
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+    }
+}
+
+.heartIcon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: red;
+    font-size: 54px;
+    z-index: 999;
+  }
