--- a/src/styles/MyNav.css
+++ b/src/styles/MyNav.css
@@ -1,3 +1,10 @@
+.navbar {
+  position: sticky;
+  top: 0;
+  background-color: #fff; /* Colore di sfondo della navbar */
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Ombra leggera */
+}
+
 .logo-img {
   width: 125px;
   height: 35px;
