--- a/src/styles/MyFooter.css
+++ b/src/styles/MyFooter.css
@@ -1,8 +1,9 @@
-.footer{
+ .footer{
     position: absolute;
     bottom: 0;
     width: 100%;
     height: 5.5rem;
+    box-shadow: 0 2px 5px rgba(51, 50, 50, 0.5); /* Ombra leggera */
 }
 .copyRi{
     margin-top: 1%;
@@ -17,12 +18,13 @@
     margin-top: .8%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: .7rem;
-    color: white;
+    color: rgb(32, 7, 122);
     text-align: left;
     
 }
 .copyRightStyle {
-    align-items: center;
-    bottom: 0;
-    height: 65px;
-}
+    display:flex;
+    align-items:start;
+    margin: auto;
+    height: 50px;
+}  
