--- a/src/styles/MyFooter.css
+++ b/src/styles/MyFooter.css
@@ -1,9 +1,10 @@
  .footer{
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
-    height: 5.5rem;
+    height: 5rem;
     box-shadow: 0 2px 5px rgba(51, 50, 50, 0.5); /* Ombra leggera */
+    background-color: rgb(57, 100, 13);
 }
 .copyRi{
     margin-top: 1%;
@@ -18,13 +19,15 @@
     margin-top: .8%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: .7rem;
+    white-space: nowrap;
     color: rgb(32, 7, 122);
     text-align: left;
+    gap: 2%;
     
 }
 .copyRightStyle {
     display:flex;
     align-items:start;
     margin: auto;
-    height: 50px;
+    height: 45px;
 }  
